--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "moment": "~2.11.2",
     "weather-icons": "~2.0.10",
     "angular": "angularjs#~1.5.3",
+    "angular-material":"~1.1.1",
     "angular-resource": "~1.5.3"
   },
   "resolutions": {
